[metadata]
name = night_sky_stacking
version = file: VERSION.txt
author = Frantisek Duris
author_email = frantisek.duris@uniba.sk
description = Python library for stacking canon cr3 images
keywords = canon stacking
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12


[options]
include_package_data = True
packages = find_namespace:
zip_safe = False

install_requires =
    numpy
    opencv-python
    rawpy
    photutils
    astropy
    setuptools
    mypy
